# spectral-mesh-simplification

./: .gitmodules  CMakeLists.txt  LICENSE  Readme.md
source/: debugbreak.h  geometry.cpp  geometry.h  half_edges.cpp  half_edges.h  main.cpp  mesh.cpp  mesh.h  metric.h  metric_edge_length.h  metric_lowpass.cpp  metric_lowpass.h  metric_quadrics.h  min_priority_queue.h  ranges.h  reduce.cpp  reduce.h  traversal.h  util.h
